--- a/res/layout/activity_home_screen.xml
+++ b/res/layout/activity_home_screen.xml
@@ -132,7 +132,7 @@
             android:textSize="60sp" />
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/date1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Todo Stalker!"
