--- a/res/layout/icon_view.xml
+++ b/res/layout/icon_view.xml
@@ -5,11 +5,23 @@
     android:orientation="vertical" >
 
     <TextView
+        android:id="@+id/percent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/map_button"
+        android:layout_toLeftOf="@+id/map_button"
+        android:fontFamily="sans-serif-light"
+        android:text="TextView"
+        android:visibility="invisible" />
+
+    <TextView
         android:id="@+id/item_todo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:layout_margin="10dp"
+        android:layout_marginTop="34dp"
         android:fontFamily="sans-serif-light"
         android:gravity="center"
         android:minHeight="50dp"
@@ -22,49 +34,24 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/percent"
+        android:id="@+id/date1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/map_button"
-        android:layout_toLeftOf="@+id/map_button"
-        android:fontFamily="sans-serif-light"
-        android:text="TextView"
-        android:visibility="invisible" />
-
-    <ImageButton
-        android:id="@+id/imageButton1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/item_todo"
-        android:adjustViewBounds="true"
-        android:background="@android:color/transparent"
-        android:fontFamily="sans-serif-light"
-        android:src="@drawable/ic_action_delete" 
-        android:onClick="deleteTodo"/>
-
-    <CheckBox
-        android:id="@+id/checkBox1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/item_todo"
-        android:layout_alignBottom="@+id/item_todo"
-        android:layout_margin="10dp"
-        android:layout_marginRight="41dp"
-        android:layout_toLeftOf="@+id/imageButton1"
-        android:fontFamily="sans-serif-light"
-        android:onClick="checkboxClicked"
-        android:text="Done"
-        android:textColor="@color/white"
-        android:textColorLink="@color/white"
-        android:textSize="23dp"
-        android:textStyle="bold" />
+        android:layout_alignParentTop="true"
+        android:background="#FFFFFF"
+        android:gravity="center"
+        android:minWidth="90dp"
+        android:text="Date"
+        android:textSize="15dp"
+        android:visibility="invisible" />
 
     <ImageButton
         android:id="@+id/map_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/checkBox1"
+        android:layout_alignBottom="@+id/item_todo"
         android:layout_marginRight="52dp"
         android:layout_toLeftOf="@+id/checkBox1"
         android:adjustViewBounds="true"
@@ -74,5 +61,35 @@
         android:maxWidth="70dp"
         android:onClick="viewMap"
         android:src="@drawable/mapiconbig" />
+
+    <CheckBox
+        android:id="@+id/checkBox1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/percent"
+        android:layout_alignBottom="@+id/percent"
+        android:layout_margin="10dp"
+        android:layout_marginRight="29dp"
+        android:layout_toLeftOf="@+id/imageButton1"
+        android:fontFamily="sans-serif-light"
+        android:onClick="checkboxClicked"
+        android:text="Done"
+        android:textColor="@color/white"
+        android:textColorLink="@color/white"
+        android:textSize="15dp"
+        android:textStyle="bold" />
+
+    <ImageButton
+        android:id="@+id/imageButton1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/map_button"
+        android:layout_marginRight="25dp"
+        android:adjustViewBounds="true"
+        android:background="@android:color/transparent"
+        android:fontFamily="sans-serif-light"
+        android:onClick="deleteTodo"
+        android:src="@drawable/ic_action_delete" />
 
 </RelativeLayout>
