--- a/res/layout/icon_view.xml
+++ b/res/layout/icon_view.xml
@@ -5,23 +5,11 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/percent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/map_button"
-        android:layout_toLeftOf="@+id/map_button"
-        android:fontFamily="sans-serif-light"
-        android:text="TextView"
-        android:visibility="invisible" />
-
-    <TextView
         android:id="@+id/item_todo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
         android:layout_margin="10dp"
-        android:layout_marginTop="34dp"
         android:fontFamily="sans-serif-light"
         android:gravity="center"
         android:minHeight="50dp"
@@ -33,6 +21,16 @@
         android:textSize="15dp"
         android:textStyle="bold" />
 
+    <TextView
+        android:id="@+id/percent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/map_button"
+        android:layout_toLeftOf="@+id/map_button"
+        android:fontFamily="sans-serif-light"
+        android:text="TextView"
+        android:visibility="invisible" />
+    
     <TextView
         android:id="@+id/date1"
         android:layout_width="wrap_content"
@@ -48,28 +46,25 @@
         android:visibility="invisible" />
 
     <ImageButton
-        android:id="@+id/map_button"
+        android:id="@+id/imageButton1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/item_todo"
-        android:layout_marginRight="52dp"
-        android:layout_toLeftOf="@+id/checkBox1"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/item_todo"
         android:adjustViewBounds="true"
         android:background="@android:color/transparent"
         android:fontFamily="sans-serif-light"
-        android:maxHeight="30dp"
-        android:maxWidth="70dp"
-        android:onClick="viewMap"
-        android:src="@drawable/mapiconbig" />
+        android:src="@drawable/ic_action_delete" 
+        android:onClick="deleteTodo"/>
 
     <CheckBox
         android:id="@+id/checkBox1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/percent"
-        android:layout_alignBottom="@+id/percent"
+        android:layout_alignBaseline="@+id/item_todo"
+        android:layout_alignBottom="@+id/item_todo"
         android:layout_margin="10dp"
-        android:layout_marginRight="29dp"
+        android:layout_marginRight="41dp"
         android:layout_toLeftOf="@+id/imageButton1"
         android:fontFamily="sans-serif-light"
         android:onClick="checkboxClicked"
@@ -80,17 +75,18 @@
         android:textStyle="bold" />
 
     <ImageButton
-        android:id="@+id/imageButton1"
+        android:id="@+id/map_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/checkBox1"
         android:layout_marginRight="10dp"
         android:layout_toLeftOf="@+id/checkBox1"
         android:adjustViewBounds="true"
         android:background="@android:color/transparent"
         android:fontFamily="sans-serif-light"
-        android:onClick="deleteTodo"
-        android:src="@drawable/ic_action_delete" />
+        android:maxHeight="30dp"
+        android:maxWidth="70dp"
+        android:onClick="viewMap"
+        android:src="@drawable/mapiconbig" />
 
 </RelativeLayout>
