--- a/res/layout/activity_notification.xml
+++ b/res/layout/activity_notification.xml
@@ -18,8 +18,8 @@
             android:layout_height="406dp"
             android:layout_marginTop="50dp"
             android:fontFamily="sans-serif-light"
-            android:minHeight="10sp"
-            android:textSize="15sp" >
+            android:minHeight="10dp"
+            android:textSize="15sp">
 
         </ListView>
 
